--- a/package.json
+++ b/package.json
@@ -18,10 +18,13 @@
     "react": "^18.2.0",
     "react-bootstrap": "^2.7.4",
     "react-bootstrap-icons": "^1.10.3",
+    "react-d3-speedometer": "^1.1.0",
     "react-dom": "^18.2.0",
+    "react-gauge": "^0.0.5",
     "react-paginate": "^8.2.0",
     "react-router-dom": "^6.11.1",
     "react-scripts": "^5.0.1",
+    "recharts": "^2.7.2",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
